start adding biome tags for crops